--- a/chroma/build.gradle
+++ b/chroma/build.gradle
@@ -1,6 +1,30 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'chroma'
+
+    publishedGroupId = 'me.priyesh'
+    libraryName = 'chroma'
+    artifact = 'chroma'
+
+    libraryDescription = 'A Material color picker view for Android'
+
+    siteUrl = 'https://github.com/ItsPriyesh/chroma'
+    gitUrl = 'https://github.com/ItsPriyesh/chroma.git'
+
+    libraryVersion = android.defaultConfig.versionName
+
+    developerId = 'ItsPriyesh'
+    developerName = 'Priyesh Patel'
+    developerEmail = 'priyeshpatel.96@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -23,11 +47,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
+
 buildscript {
     ext.kotlin_version = '1.0.0'
     repositories {
@@ -37,6 +60,6 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-repositories {
-    mavenCentral()
-}
+
+apply from: 'maven-install.gradle'
+apply from: 'bintray.gradle'
