--- a/chroma/build.gradle
+++ b/chroma/build.gradle
@@ -38,6 +38,10 @@ android {
         versionName VersionName
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
