--- a/chroma-sample/build.gradle
+++ b/chroma-sample/build.gradle
@@ -24,4 +24,5 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
